--- a/dotnet-efcore-check-syned/dotnet-efcore-check-syned.csproj
+++ b/dotnet-efcore-check-syned/dotnet-efcore-check-syned.csproj
@@ -7,4 +7,8 @@
     <RootNamespace>dotnet_efcore_check_syned</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="7.0.4" />
+  </ItemGroup>
+
 </Project>
